# Theology_Ai_Lab

./: .env.bak  .env.example  .gitignore  01_Library  02_Brain  1_INSTALL_MAC.command  1_INSTALL_WIN.bat  2_PROCESS_DATA.command  3_CONNECT_AI.command  3_START_MAC.command  3_START_SERVER.command  3_START_WIN.bat  INSTALL.md  INSTALL_ONECLICK.bat  INSTALL_ONECLICK.command  QUICKSTART.md  README.md  READ_ME_KOREAN.md  Theology_AI_Cloud_Indexer.ipynb  Theology_Lab.code-workspace  UPDATE_MAC.command  UPDATE_WIN.bat  USAGE.md  docker-compose.yml  requirements.txt
.github/workflows/: build-installers.yml
03_System/: .dockerignore  Dockerfile  app.py  processor_v4.py  pyproject.toml  requirements.txt  server.py  start.sh  vault_history.json
03_System/.streamlit/: config.toml
03_System/agents/: librarian.py  researcher.py  scribe.py
03_System/pipeline/: __init__.py  chunker.py  embedder.py  metadata_parser.py  router.py  searcher.py  semantic_chunker.py
03_System/prompts/: Internal_Orchestration_Logic.md  Parrehsia_Review_Protocol.md  Theological_Review_Protocol.md
03_System/tools/: build_lemma_index.py  dict_query.py
03_System/utils/: db_builder.py  db_manager.py  dual_search.py  local_pdf_processor.py  ocr_pdf_processor.py  page_mapping_loader.py  page_number_detector.py  pdf_chunker.py  pipeline.py  pipeline_legacy.py  query_expander.py  search.py
docs/: ANTIGRAVITY_GUIDE.md  GUI_GUIDE.md  OBSIDIAN_INTEGRATION.md  QUICKSTART.md  TECH_STACK_OVERVIEW.md
docs/dev_archive/: Pipeline_Enhancement_Plan_v5.md
packaging/: README.md  build_mac_dmg.sh
packaging/resources/: .gitkeep  icon.icns
packaging/windows/: theology_ai_lab.iss
