[project]
name = "theology-ai-lab"
version = "2.0.0"
description = "Theological research vector database with MCP server integration"
requires-python = ">=3.11"
readme = "../README.md"

    # Core - Vector Database
    "chromadb>=0.4.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-chroma>=0.1.0",

    # Core - Embeddings
    "sentence-transformers>=2.3.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",  # Required for embeddings

    # Core - Search
    "rank_bm25>=0.2.2",
    "numpy>=1.24.0",

    # GUI
    "streamlit>=1.30.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "watchdog>=4.0.0", # For Streamlit auto-reload
]

[project.optional-dependencies]
indexer = [
    "pymupdf>=1.23.0",
    "pypdf>=4.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "pillow>=10.0.0",
    "langchain-text-splitters>=0.1.0",
    "tiktoken>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

agents = [
    "google-genai>=0.3.0",
    "playwright>=1.49.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
